# CampusGPT-RAG

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .pylintrc  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURE_CHECKLIST.md  Makefile  QUALITY_REPORT.md  README.md  SECURITY.md  USER_MANUAL.md  app.py  biome.json  cliff.toml  create_samples.py  dummy.js  dummy.test.js  eslint.config.js  knip.json  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg  setup.py  validate_project.py
.husky/: pre-commit
.specify/: .gitkeep  README.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  (+1 more)
assets/: styles.css
modules/: analytics.py  auth.py  chunking.py  database.py  document_parser.py  embedding_manager.py  embeddings.py  feedback.py  llm_local.py  pdf_loader.py  rag_chain.py  rag_pipeline.py  retriever.py  semantic_search.py  summarizer.py  ui.py  vector_store.py
pages/: Admin.py  Analytics.py  Chat.py  Dashboard.py  Models.py  RAG_Evaluation.py  Search.py  Settings.py  Summarize.py  Upload.py
scripts/: package_codebase.py  run_tests.py  validate_project.py
specs/: README.md  authentication.md  campus_search.md  chat_system.md  embeddings.md  pdf_upload.md  rag_pipeline.md  summarization.md  vector_store.md
tests/: conftest.py  test_auth.py  test_chat.py  test_document_parser.py  test_embeddings.py  test_rag_pipeline.py  test_summarizer.py  test_vector_store.py
(+24 files in other folders)
